@startuml SceneSystem
!theme toy
'!theme vibrant
'!theme amiga
skinparam backgroundColor gray

namespace nitou{

    namespace EventChannel{

        ' イベントの発行元
        abstract class EventChannel{
            + RaiseEvent() : void
        }

        abstract class EventListener{
            + Respond() : void
        }

        ' -----------------
        ' 継承元
        EventChannel -up-|> ScriptableObject
        EventListener -up-|> MonoBehaviour
        ' 依存関係
        EventChannel <-right- EventListener
    }

}


package CustomModule{

    class CustomEC{}

    ' 継承
    CustomEC -up-|> nitou.EventChannel.EventChannel
}


@enduml